# GazpreaCompiler

./: -o  .clang-format  .gitignore  1.in  CMakeLists.txt  LICENSE.md  Makefile  PLAN.md  README.md  plan.md  rename_test_files.py  repro.in  repro.ll  test.in
src/: BackEnd.cpp  CMakeLists.txt  ErrorListener.cpp  main.cpp
src/ast/: Ast.cpp  CMakeLists.txt  RootAst.cpp
src/ast/expressions/: ArgAst.cpp  ArrayAccessAst.cpp  ArrayLiteralAst.cpp  BinaryAst.cpp  BoolAst.cpp  BoolLiteralAst.cpp  BuiltinFuncAst.cpp  CMakeLists.txt  CastAst.cpp  CharAst.cpp  CharLiteralAst.cpp  DomainExprAst.cpp  FuncProcCallAst.cpp  GeneratorAst.cpp  IdentifierAst.cpp  IntegerAst.cpp  IntegerLiteralAst.cpp  RangeAst.cpp  RangedIndexExprAst.cpp  RealAst.cpp  RealLiteralAst.cpp  SingularIndexExprAst.cpp  StringLiteralAst.cpp  StructAccessAst.cpp  StructFuncCallRouterAst.cpp  StructLiteralAst.cpp  TupleAccessAst.cpp  TupleLiteralAst.cpp  UnaryAst.cpp
src/ast/prototypes/: CMakeLists.txt  FunctionAst.cpp  FunctionParamAst.cpp  ProcedureAst.cpp  ProcedureParamAst.cpp  PrototypeAst.cpp
src/ast/statements/: ArrayElementAssignAst.cpp  AssignmentAst.cpp  BlockAst.cpp  BreakAst.cpp  CMakeLists.txt  ConditionalAst.cpp  ConditionalStatementAst.cpp  ContinueAst.cpp  DeclarationAst.cpp  IdentifierLeftAst.cpp  InputAst.cpp  IteratorLoopAst.cpp  LoopAst.cpp  MemberFunctionAst.cpp  OutputAst.cpp  ProcedureCallAst.cpp  ReturnAst.cpp  StructDeclarationAst.cpp  TypealiasAst.cpp  (+4 more)
src/backend/: Backend.cpp  CMakeLists.txt  Root.cpp
src/symTable/: ArrayTypeSymbol.cpp  BuiltInTypeSymbol.cpp  CMakeLists.txt  EmptyArrayTypeSymbol.cpp  MethodSymbol.cpp  Scope.cpp  ScopedSymbol.cpp  StructTypeSymbol.cpp  SymTable.cpp  Symbol.cpp  TupleTypeSymbol.cpp  Type.cpp  TypealiasSymbol.cpp  VariableSymbol.cpp  VectorTypeSymbol.cpp
src/types/: CMakeLists.txt  Type.cpp
src/utils/: BackendUtils.cpp  CMakeLists.txt  ValidationUtils.cpp
(+599 files in other folders)
